# BEAR-LLM

./: .gitignore  BUILD_FIX.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  FINAL_IMPLEMENTATION_STATUS.md  GEMINI.md  NPM_VULNERABILITIES.md  PERFORMANCE_FIXES_REPORT.md  PRIVACY.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY_FIXES_REPORT.md  THIRD_PARTY_LICENSES.txt  TODO.md  index.html  latest.json.example  package-lock.json  package.json  pii_exclusions.toml  pii_exclusions_africa.toml  pii_exclusions_apac.toml  pii_exclusions_cis.toml  pii_exclusions_en.toml  pii_exclusions_eu.toml  pii_exclusions_latam.toml  pii_exclusions_mena.toml  pii_exclusions_south_asia.toml  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci-cd.yml  compliance-tests.yml  fast-release-build.yml  release.yml  tauri-windows-release.yml  windows-build.yml
docs/: 3-Layer-PII-Detection-Implementation.md  AGENTIC_RAG_SYSTEM.md  AGENT_FUNCTIONS_GUIDE.md  AI_TRANSPARENCY_NOTICE.md  ARCHITECTURE.md  AUTO_UPDATER_SETUP.md  BEAR-LLM-Roadmap-checklist.md  CANDLE_MIGRATION.md  CHAT_ENCRYPTION_USAGE.md  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  CUDA_BUILD_FIX.md  GDPR_COMPLIANCE_REPORT.md  GDPR_IMPLEMENTATION_SUMMARY.md  GGUF_INTEGRATION.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INFRASTRUCTURE_ADDITIONS.md  INFRASTRUCTURE_INTEGRATION_SUMMARY.md  INTEGRATION_SUMMARY.md  LEGAL_COMPLIANCE_TODO.md  LOGGER_SECURITY.md  Layer2_gline-rs_Implementation_Blocker.md  MASTER_ROADMAP.md  MODEL_CARD_TRANSPARENCY.md  PII_Detection_Analysis.md  PII_Detection_Integration_Research.md  PLACEHOLDER_FIXES.md  PRODUCTION_IMPROVEMENTS.md  PRODUCTION_READINESS_REPORT.md  PROJECT_STATUS.md  ROADMAP.md  Rust_platforms_comparative_analysis.md  SECURITY_IMPROVEMENTS.md  SUPPORTED_DOCUMENT_FORMATS.md  Strategic_roadmap_report.md  UNWRAP_AUDIT_REPORT.md  pii_scrubbing.md
docs/architecture/: ADR-001-compliance-integration.md  README.md  component-interactions.md  integration-implementation-plan.md  technology-evaluation.md
docs/compliance/: AI_ACT_COMPLIANCE_REPORT.md  IMPLEMENTATION_SUMMARY.md  MASTER_COMPLIANCE_GUIDE.md  QUICK_REFERENCE.md  TRANSPARENCY_INTEGRATION_GUIDE.md  architecture-analysis.md  data_flows.md  processing_register.md  research-findings.md  risk_assessment.md  test-strategy.md  third_party_processors.md
docs/model_cards/: mistral_card.toml  phi2_card.toml  tinyllama_card.toml
public/fonts/: inter.css
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  pii_exclusions.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_user_consent.sql  002_create_consent_versions.sql  003_add_retention_columns.sql  004_create_audit_log.sql  005_create_processing_records.sql  006_create_consent_log.sql  add_user_id_columns.sql
src-tauri/src/: candle_inference.rs  commands.rs  constants.rs  database.rs  embeddings.rs  export_engine.rs  file_processor.rs  gguf_inference.rs  hardware_detector.rs  hardware_monitor.rs  huggingface_api.rs  inference_engine.rs  lib.rs  llm_inference.rs  llm_manager.rs  llm_manager_production.rs  llm_manager_v2.rs  main.rs  mcp_server.rs  model_manager.rs  pii_detector.rs  pii_detector_production.rs  pii_detector_v2.rs  presidio_bridge.rs  presidio_service.rs  process_helper.rs  rag_engine.rs  rag_engine_production.rs  rag_engine_v2.rs  rate_limiter.rs  risk_assessment.rs  setup_manager.rs  system_monitor.rs  utils.rs
src-tauri/src/ai_transparency/: confidence.rs  disclaimer_generator.rs  generic_disclaimer.rs  mod.rs  model_card_fetcher.rs  model_card_parser.rs  model_registry.rs  notices.rs
src-tauri/src/ai_transparency/tests/: transparency_tests.rs
src-tauri/src/commands/: consent_commands.rs  export_commands.rs  mod.rs  model_transparency.rs  scheduler_commands.rs  transparency_commands.rs
src-tauri/src/compliance/: audit.rs  commands.rs  consent.rs  mod.rs  retention.rs
src-tauri/src/compliance/tests/: README.md  mod.rs
src-tauri/src/compliance/tests/e2e/: performance_tests.rs  user_rights_tests.rs
src-tauri/src/compliance/tests/fixtures/: mod.rs
src-tauri/src/compliance/tests/integration/: export_workflow_tests.rs
src-tauri/src/compliance/tests/security/: injection_tests.rs
src-tauri/src/compliance/tests/unit/: export_engine_tests.rs  pii_detector_tests.rs
src-tauri/src/database/: chat_encryption_integration.rs  export_integration.rs  export_integration_tests.rs  mod.rs
src-tauri/src/database/tests/: export_integration_tests.rs  mod.rs
src-tauri/src/middleware/: consent_guard.rs  mod.rs
src-tauri/src/middleware/tests/: consent_guard_tests.rs
src-tauri/src/pii_detector/: candle_ner.rs
src-tauri/src/scheduler/: mod.rs  retention_tasks.rs
src-tauri/src/scheduler/tests/: scheduler_tests.rs
src-tauri/src/security/: chat_encryption.rs  database_encryption.rs  encrypted_pool.rs  key_manager.rs  migration.rs  mod.rs
src-tauri/src/security/tests/: chat_encryption_tests.rs  encryption_tests.rs  mod.rs
src-tauri/src/system/: memory_info.rs  mod.rs
src/components/: BearLogo.tsx  ChatMessage.tsx  DatabaseQuery.tsx  DocumentAnalysis.tsx  ErrorBoundary.tsx  FileUpload.tsx  FloppyDiskIcon.tsx  HardwareStatus.tsx  HuggingFaceBrowser.tsx  ModelSelector.tsx  PIIGuard.tsx  RAGEngineSelector.tsx  RAGInterface.tsx  Settings.tsx  SetupWizard.tsx  TransparencyNotice.tsx  UpdateNotification.tsx
src/components/privacy/: AuditTrail.tsx  ConsentManager.tsx  DataViewer.tsx  DeletionRequest.tsx  ExportPanel.tsx  PrivacyDashboard.tsx  RetentionSettings.tsx  index.ts  styles.css  types.ts
src/services/: huggingface.ts
src/stores/: appStore.ts
src/types/: lucide-react.d.ts  react-syntax-highlighter.d.ts  window.d.ts
src/utils/: logger.ts  updater.ts
tests/ai_transparency/: mod.rs  model_card_tests.rs  model_registry_tests.rs
tests/pii/: TEST_STRATEGY.md  TEST_SUMMARY.md  mod.rs  pii_exclusions_tests.rs  pii_integration_tests.rs  pii_layer1_presidio_tests.rs  pii_layer2_gline_tests.rs  pii_layer2_regex_tests.rs
(+2 files in other folders)
